--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     width: 60px;
     height: 60px;
     border-radius: 10px;
-    box-shadow: -8px -8px 15px rgb(255, 255,255, 0.1), 5px 5px 15px rgb(0, 0,0, 0.2);
+    box-shadow: -8px -8px 15px rgba(136, 107, 107, 0.1), 5px 5px 15px rgb(0, 0,0, 0.2);
     background: transparent;
     font-size: 20px;
     color: #fff;
@@ -50,4 +50,28 @@ form input.equal{
 }
 form input.operator{
     color: #33ffd8;
+}
+@media (max-width: 768px) {
+    .calculator form input {
+        width: 40px;
+        height: 40px;
+        font-size: 16px;
+        margin: 5px;
+    }
+}
+@media (max-width: 768px) {
+    form .display input {
+        font-size: 30px;
+    }
+}
+@media (max-width: 768px) {
+    .calculator {
+        padding: 10px;
+    }
+}
+@media (max-width: 768px) {
+    form div {
+        display: flex;
+        justify-content: space-between;
+    }
 }
